# keyvault

./: .gitignore  .versionrc.js  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  release.config.js  sync-version.js
.github/: release.yml
src/: app.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  crypto.rs  main.rs  models.rs  storage.rs
